# BattleChan

./: .gitignore  Cargo.toml  README.md  approve_setup.sh  canister_ids.json  deploy.sh  dfx.json  package-lock.json  package.json  t.js  testScript.sh  testingerror.sh  token-ledger-setup.sh  token.sh  tsconfig.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/battle_chan_backend/: battle_chan_backend.wasm  index.js  (+2 more)
src/battle_chan_backend/: Cargo.toml  battle_chan_backend.did
src/battle_chan_backend/src/: lib.rs
src/battle_chan_backend/src/candid/: mod.rs
src/battle_chan_backend/src/features/: mod.rs
src/battle_chan_backend/src/features/posts/: mod.rs  post_model.rs  post_service.rs
src/battle_chan_backend/src/shared/: mod.rs  state.rs
src/battle_chan_frontend/: index.html  package-lock.json  package.json  tsconfig.json
src/battle_chan_frontend/src/: App.jsx  Routes.tsx  index.css  main.jsx
src/battlechan_backend/: keys.mo  main.mo  passkey.txt
src/battlechan_backend/controllers/: board.mo  boardController.mo  comment.mo  post.mo  postController.mo  reply.mo  search.mo  user.mo  userController.mo
src/battlechan_backend/token/: token.mo
src/battlechan_backend/utils/: helper.mo  message.mo  types.mo  validations.mo
src/battlechan_frontend/: index.html  package.json  tailwind.config.js  vite.config.js
src/battlechan_frontend/public/: .ic-assets.json5
src/battlechan_frontend/src/: App.css  App.jsx  App.tsx  AppRoutes.jsx  AppRoutes.tsx  ClientSetup.d.ts  ClientSetup.jsx  Layout.tsx  Nec.jsx  index.scss  main.jsx
(+194 files in other folders)
