[package]
name = "battle_chan_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.1"
candid = "0.10.3"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4"
once_cell = "1.19.0"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
